Everything working fine, no issue in sign up activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
     <string name="app_name">C++ Fundamentals</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="web_client_id">122811210408-k5pi6eq0tmjc7mtu6f36rjkh5533b3k2.apps.googleusercontent.com</string>
 </resources>
