--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">C++ Fundamentals</string>
+    <string name="app_name">C++</string>
     <string name="web_client_id">122811210408-k5pi6eq0tmjc7mtu6f36rjkh5533b3k2.apps.googleusercontent.com</string>
 </resources>
